--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dalpon-mobile-app",
+  "name": "resources-management",
   "version": "1.0.4",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-app-loading": "^2.1.1",
+    "expo-camera": "~13.4.2",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.3.0",
@@ -31,21 +32,28 @@
     "i18next": "^22.5.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.9.1",
+    "react-native-progress": "^5.0.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "^3.22.1",
+    "react-native-svg": "*",
     "react-native-vector-icons": "^10.0.0",
-    "uuid": "^9.0.0",
-    "expo-camera": "~13.4.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "metro-config": "^0.77.0",
+    "@types/react-native": "^0.72.2",
+    "metro-config": "^0.72.0",
     "typescript": "^5.1.3"
+  },
+  "peerDependencies": {
+    "react-native-svg": "*"
   },
   "private": true
 }
