--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~49.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-camera": "~13.4.2",
+    "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.3.0",
@@ -32,6 +35,7 @@
     "i18next": "^22.5.1",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-check-box": "^2.1.7",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.12.0",
@@ -43,6 +47,7 @@
     "react-native-screens": "^3.22.1",
     "react-native-svg": "*",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-version-check": "^3.4.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
