--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resources-management",
+  "name": "new-era-excavation",
   "version": "1.0.4",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-community/cli": "^11.3.8",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.6",
@@ -21,30 +21,32 @@
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~49.0.5",
     "expo-app-loading": "^2.1.1",
-    "expo-camera": "~13.4.2",
+    "expo-camera": "~13.4.4",
     "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "^12.3.0",
     "expo-localization": "~14.3.0",
     "expo-location": "~16.1.0",
+    "expo-radio-button": "^1.0.8",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "^2.4.0",
     "i18n-js": "^4.2.3",
     "i18next": "^22.5.1",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-check-box": "^2.1.7",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-macos": "^0.72.0",
     "react-native-paper": "^5.9.1",
     "react-native-progress": "^5.0.0",
     "react-native-progress-circle": "^2.1.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "^3.22.1",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "*",
     "react-native-vector-icons": "^10.0.0",
     "react-native-version-check": "^3.4.7",
@@ -54,7 +56,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
-    "metro-config": "^0.72.0",
+    "metro-config": "^0.72.4",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
